@@ -14,6 +14,18 @@
 #include <m_comp.h>
 
 #include <mc_glob.h>
+#include <m_general.h>
+
+
+#define MAX_RT_C_EXEC           4096
+
+typedef struct ___rt_conditional
+{
+  _d_drt_h mppd;
+  _g_match match;
+  char c_exec[MAX_RT_C_EXEC];
+  __g_proc_v p_exec;
+} _rt_c, *__rt_c;
 
 void *
 as_ref_to_val_lk(char *match, void *c, __d_drt_h mppd, char *defdc);
